# yt-comprehend

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt  test_setup.py
.claude/skills/yt-comprehend/: SKILL.md
docs/: SETUP.md
electron/: .gitignore  cli.js  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
electron/src/main/: index.ts
electron/src/main/ipc/: config-service.ts  file-service.ts  process-service.ts  terminal-service.ts
electron/src/preload/: index.ts
electron/src/renderer/: App.tsx  index.html  main.tsx
electron/src/renderer/components/: Editor.tsx  FileTree.tsx  Header.tsx  ProgressPanel.tsx  Settings.tsx  Terminal.tsx
electron/src/renderer/lib/: providers.ts
electron/src/renderer/stores/: app-store.ts
electron/src/renderer/styles/: globals.css
src/: __init__.py  cli.py  comprehend.py  summarize.py  utils.py
src/extractors/: __init__.py  audio.py  captions.py  gemini_video.py  visual.py
