[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-comprehend"
version = "0.1.0"
description = "Video comprehension platform for LLM consumption"
readme = "docs/SETUP.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael"}
]
keywords = ["youtube", "transcription", "whisper", "llm", "video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.12.1",
    "faster-whisper>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "validators>=0.22.0",
]

[project.optional-dependencies]
visual = [
    "scenedetect[opencv]>=0.6.4",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "imagededup>=0.3.2",
    "pillow>=10.0.0",
]
gpu = [
    "paddlepaddle-gpu>=2.6.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
yt-comprehend = "src.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/yt-comprehend"
Documentation = "https://github.com/yourusername/yt-comprehend#readme"
Repository = "https://github.com/yourusername/yt-comprehend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
